--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,5 +150,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="app_id">1216868208493684</string>
     <string name="buy_sell_bphc"><![CDATA[Buy&Sell@BPHC]]></string>
+    <string name="title_activity_bphcmaps">Map</string>
 
 </resources>
